<resources>

    <string name="app_name">Clock</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_resume">Resume</string>
    <string name="button_reset">Reset</string>
    <string name="text_timer_default_time">10:00</string>
    <string name="dialog_timer_title">Set time for timer</string>
    <string name="dialog_set">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="button_lap">Lap</string>
    <string name="text_alarm_default_time">07:00</string>
    <string name="alarm_notification">Alarm stop</string>
    <string name="timer_notification">Timer stop</string>
    <string name="alarm_shortcut_short_msg">Alarm</string>
    <string name="stopwatch_shortcut_short_msg">Stopwatch</string>
    <string name="timer_shortcut_short_msg">Timer</string>

</resources>
