<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_above="@id/linear_layout_buttons"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Chronometer
            android:id="@+id/chronometer_stopwatch"
            android:layout_weight="2"
            android:textSize="40sp"
            android:visibility="visible"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_stopwatch_laps"
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <include layout="@layout/partial_line" />

    <LinearLayout
        android:id="@+id/linear_layout_buttons"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_start_stopwatch"
            android:text="@string/button_start"
            android:textStyle="bold"
            android:background="@null"
            android:padding="22dp"
            android:visibility="visible"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_stop_resume_stopwatch"
            android:text="@string/button_stop"
            android:layout_weight="1"
            android:background="@null"
            android:textStyle="bold"
            android:padding="22dp"
            android:visibility="gone"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_reset_lap_stopwatch"
            android:text="@string/button_lap"
            android:background="@null"
            android:textStyle="bold"
            android:padding="22dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>